Muchos mas cambios

--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
         <nav class="nav-menu">
             <ul>
                 <li class="nav-item"><a href="#home">Home</a></li>
-                <li class="nav-item"><a href="#about">About Me</a></li>
-                <li class="nav-item"><a href="#projects">Gallery</a></li>
+                <li class="nav-item"><a href="#about">Sobre mi</a></li>
+                <li class="nav-item"><a href="#projects">Galeria</a></li>
                 <li class="nav-item"><a href="#skills">Skills</a></li>
-                <li class="nav-item"><a href="#contact">Contact</a></li>
+                <li class="nav-item"><a href="#contact">Contacto</a></li>
             </ul>
         </nav>
         <!-- From Uiverse.io by RiccardoRapelli --> 
@@ -164,8 +164,8 @@
             </div>
             <div class="about-content">
                 <h2>
-  Sobre Mí
-  <a href="CV.pdf" class="cv-download-btn-inline" download>CV</a>
+  Sobre mi
+  <a href="CV.pdf" class="cv-download-btn-inline" download>Cv</a>
 </h2>
                 <p>
                     Mi nombre es Alejandro Bonilla, un dedicado artista digital freelance, ilustrador y amante de la fotografia con más de 4 años de experiencia profesional. Mi pasión radica en crear narrativas visuales atractivas y mundos únicos.
@@ -275,21 +275,102 @@
             </article>
             <article class="project-card" 
                      data-media='[
-                       {"type": "image", "src": "concepto4-1.jpg"}, 
-                       {"type": "image", "src": "concepto4-2.jpg"}, 
-                       {"type": "image", "src": "concepto4-3.jpg"},
-                       {"type": "video", "src": "/videos/proceso-nave.mp4"}
+                     {"type": "image", "src": "images/wukong.jpg"},
+                       {"type": "image", "src": "images/alejandro-bonilla-wukong3-color-correct.jpg"}, 
+                       {"type": "image", "src": "images/alejandro-bonilla-wukong3.jpg"},
+                       {"type": "video", "src": "videos/video-sin-titulo-hecho-con-clipchamp.mp4", "thumbnail": "/images/wukong.jpg"}
                      ]' 
-                     data-title="Nave Espacial" 
-                     data-desc="Diseño de una nave espacial para un juego de ciencia ficción, con detalles técnicos y colores vibrantes." 
+                     data-title="Wukong" 
+                     data-desc="Esta impactante ilustración digital retrata a Sun Wukong, el Rey Mono, en una pose de batalla feroz y dinámica, en medio de una tormenta. Con pelaje blanco y una barba imponente que enmarca un rostro lleno de determinación, sus ojos brillan con una luz amarilla intensa. Viste un atuendo oscuro, posiblemente de color púrpura o granate, y luce brazaletes dorados en sus muñecas, un gran collar de cuentas oscuras alrededor de su cuello y la icónica diadema dorada (el filete dorado) flotando justo encima de su cabeza." 
                      data-category="ilustraciones" 
                      data-program="Illustrator" 
                      data-date="Noviembre 2023">
-                <img src="concepto4-1.jpg" alt="Nave Espacial" class="carousel-img">
+                <img src="images/wukong.jpg" alt="Wukong" class="carousel-img">
                 <div class="overlay">
-                    <h3>Nave Espacial</h3>
+                    <h3>Wukong</h3>
                     <p class="program">Hecho en: Illustrator</p>
                     <p class="date">Fecha: Noviembre 2023</p>
+                </div>
+            </article>
+             <article class="project-card" 
+                     data-media='[
+                       {"type": "image", "src": "images/Sketch.jpg"},
+                       {"type": "image", "src": "images/sketch2.png"},
+                       {"type": "image", "src": "images/sketch3.jpg"},
+                       {"type": "image", "src": "images/skecth4.png"},
+                       {"type": "image", "src": "images/sketch5.jpg"}
+                     ]' 
+                     data-title="Sketches" 
+                     data-desc="Esta colección reúne una serie de sketches y estudios de práctica donde exploro diversas facetas de la ilustración digital. A través de estos ejercicios, me enfoco en el desarrollo de personajes, la captura de expresiones y emociones, el estudio de la iluminación y la atmósfera, así como la experimentación con diferentes estilos de renderizado y paletas de color. Cada pieza representa una oportunidad para refinar técnicas, desde la anatomía y la composición hasta la creación de narrativas visuales sutiles. Este conjunto de trabajos refleja mi dedicación al aprendizaje continuo y la búsqueda de una voz artística versátil y expresiva" 
+                     data-category="ilustraciones" 
+                     data-program="Clip Studiq Paint" 
+                     data-date="Febrero / Marzo 2025">
+                <img src="images/sketch3.jpg" alt="Sketches" class="carousel-img">
+                <div class="overlay">
+                    <h3>Sketches</h3>
+                    <p class="program">Hecho en: Clip Studio Paint</p>
+                    <p class="date">Fecha: Febrero / Marzo 2025</p>
+                </div>
+            </article>
+
+            <article class="project-card" 
+                     data-media='[
+                       {"type": "image", "src": "images/photos/IMG_1489.jpg"},
+                       {"type": "image", "src": "images/photos/P1010479.jpg"},
+                       {"type": "image", "src": "images/photos/animal4.jpg"},
+                       {"type": "image", "src": "images/photos/animal5.jpg"}
+                     ]' 
+                     data-title="Vida Salvaje y Doméstica: Una Mirada Cercana" 
+                     data-desc="Esta colección fotográfica explora la belleza y singularidad del mundo animal, capturando momentos íntimos y expresiones auténticas. Desde la serenidad del reposo hasta la alerta curiosidad, cada imagen busca revelar la esencia de sus protagonistas en su entorno natural o cotidiano, jugando con la luz y la textura para transmitir la emoción del instante" 
+                     data-category="fotos"
+                     data-program="Canon EOS M50 Mark II" 
+                     data-date="Marzo 2025">
+                <img src="images/photos/IMG_1489.jpg" alt="Neo Tokyo 2077" class="carousel-img">
+                <div class="overlay">
+                    <h3>Vida Salvaje y Doméstica: Una Mirada Cercana</h3>
+                    <p class="program">Tomadas con: Canon EOS M50 Mark II</p>
+                    <p class="date">Fecha: Marzo 2025</p>
+                </div>
+            </article>
+
+            <article class="project-card" 
+                     data-media='[
+                       {"type": "image", "src": "images/photos/Nenufar1.jpg"},
+                       {"type": "image", "src": "images/photos/Nenufar2.jpg"},
+                       {"type": "image", "src": "images/photos/Nenufar3.jpg"},
+                       {"type": "image", "src": "images/photos/P1010521.jpg"},
+                       {"type": "image", "src": "images/photos/P1010524.jpg"}
+                     ]' 
+                     data-title="Flora: Un Lienzo Natural" 
+                     data-desc="Esta serie fotográfica se sumerge en el universo de la flora, capturando la exquisita belleza de las flores y hojas en su máximo esplendor. A través de colores vibrantes, texturas delicadas y el juego efímero de la luz y el agua, cada imagen es una invitación a apreciar los detalles íntimos y la perfección natural que a menudo pasan desapercibidos." 
+                     data-category="fotos" 
+                     data-program="Canon EOS M50 Mark II" 
+                     data-date="Enero / Febrero 2025">
+                <img src="images/photos/Nenufar1.jpg" alt="Flora: Un Lienzo Natural" class="carousel-img">
+                <div class="overlay">
+                    <h3>Flora: Un Lienzo Natural</h3>
+                    <p class="program">Tomadas con: Canon EOS M50 Mark II</p>
+                    <p class="date">Fecha: Enero / Febrero 2025</p>
+                </div>
+            </article>
+
+            <article class="project-card" 
+                     data-media='[
+                       {"type": "image", "src": "images/photos/pajarito1.jpg"},
+                       {"type": "image", "src": "images/photos/pajarito3.jpg"},
+                       {"type": "image", "src": "images/photos/pajarito4.jpg"},
+                       {"type": "image", "src": "images/photos/pajarito5.jpg"}
+                     ]' 
+                     data-title="Visitantes Emplumados" 
+                     data-desc="Esta serie fotográfica presenta una colección de aves capturadas en momentos espontáneos, a menudo a través del umbral de una ventana o en la cercanía del hogar. Cada imagen es un testimonio de la belleza y adaptabilidad de estas criaturas aladas, revelando sus colores, texturas y expresiones en encuentros fugaces que invitan a la observación paciente y al aprecio por la naturaleza que nos rodea" 
+                     data-category="fotos" 
+                     data-program="Canon EOS M50 Mark II" 
+                     data-date="Mayo 2025">
+                <img src="images/photos/pajarito1.jpg" alt="Visitantes Emplumados" class="carousel-img">
+                <div class="overlay">
+                    <h3>Urban Poetry</h3>
+                    <p class="program">Tomadas con: Canon EOS M50 Mark II</p>
+                    <p class="date">Fecha: Mayo 2025</p>
                 </div>
             </article>
         </div>
