cambios en el index.html y styles.css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="es">
    <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="description" content="Portfolio de Bonialeart - Arte digital, ilustración y concept art únicos para proyectos creativos. ¡Contrátame para dar vida a tus ideas!">
     <meta name="keywords" content="arte digital, ilustración, concept art, fotografía, portfolio, Bonialeart, artista freelance, diseño creativo">
     <meta name="author" content="Alejandro Bonilla (Bonialeart)">
